--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <h2>Summary</h2>
     <P>Tal Shohat, 31 years old. from Israel.<br/>
     Fast learner and eager to learn.<br/>
-    <h1>*put more details to Summary later!!!*</h1></P>
     <p><h2>Education</h2>
     <ul>
         <li>
@@ -24,7 +23,7 @@
             third year student in education studies in Beit Berl college
         </li>
     </ul></p>
-    <h2>work experience</h2>
+    <h2>Work Experience</h2>
     <ul>
         <li>
             2010-2013 - IDF 
